优化图片路径

--- a/i18n/blog/avif-to-png-transparent-background/ja.json
+++ b/i18n/blog/avif-to-png-transparent-background/ja.json
@@ -7,7 +7,7 @@
   "readingTime": 5,
   "category": "ガイド",
   "keywords": "avif png 変換 透明, アルファチャンネル, 背景 透明 保持, avif vs png 画質",
-  "image": "/blog02.jpg",
+  "image": "https://img.avifkit.com/blog/blog02.webp",
   "content": [
     {
       "type": "lead",
