--- a/i18n/blog/avif-vs-jpg-quality-comparison/es.json
+++ b/i18n/blog/avif-vs-jpg-quality-comparison/es.json
@@ -7,7 +7,7 @@
   "readingTime": 5,
   "category": "Comparación",
   "keywords": "avif vs jpg calidad, comparación formato imagen, comparación tamaño archivo",
-  "image": "/blog04.jpg",
+  "image": "https://img.avifkit.com/blog/blog04.webp",
   "content": [
     {
       "type": "lead",
