--- a/i18n/blog/avif-vs-jpg-quality-comparison/fr.json
+++ b/i18n/blog/avif-vs-jpg-quality-comparison/fr.json
@@ -7,7 +7,7 @@
   "readingTime": 5,
   "category": "Comparaison",
   "keywords": "avif vs jpg qualité, comparaison format image",
-  "image": "/blog04.jpg",
+  "image": "https://img.avifkit.com/blog/blog04.webp",
   "content": [
     {
       "type": "lead",
