--- a/i18n/blog/avif-vs-jpg-quality-comparison/ja.json
+++ b/i18n/blog/avif-vs-jpg-quality-comparison/ja.json
@@ -7,7 +7,7 @@
   "readingTime": 5,
   "category": "比較",
   "keywords": "avif vs jpg 画質, 画像形式 比較, ファイルサイズ 比較, 圧縮 品質",
-  "image": "/blog04.jpg",
+  "image": "https://img.avifkit.com/blog/blog04.webp",
   "content": [
     {
       "type": "lead",
