--- a/i18n/blog/batch-convert-avif-images-free/en.json
+++ b/i18n/blog/batch-convert-avif-images-free/en.json
@@ -7,7 +7,7 @@
   "readingTime": 4,
   "category": "Tutorial",
   "keywords": "batch convert avif, bulk avif converter, convert multiple avif files, avif batch processing",
-  "image": "/blog05.jpg",
+  "image": "https://img.avifkit.com/blog/blog05.webp",
   "content": [
     {
       "type": "lead",
