--- a/i18n/blog/batch-convert-avif-images-free/es.json
+++ b/i18n/blog/batch-convert-avif-images-free/es.json
@@ -7,7 +7,7 @@
   "readingTime": 4,
   "category": "Tutorial",
   "keywords": "convertir avif por lotes, convertidor masivo avif, convertir múltiples archivos avif",
-  "image": "/blog05.jpg",
+  "image": "https://img.avifkit.com/blog/blog05.webp",
   "content": [
     {
       "type": "lead",
