--- a/i18n/blog/batch-convert-avif-images-free/fr.json
+++ b/i18n/blog/batch-convert-avif-images-free/fr.json
@@ -7,7 +7,7 @@
   "readingTime": 4,
   "category": "Tutoriel",
   "keywords": "convertir avif par lot, convertisseur avif en masse",
-  "image": "/blog05.jpg",
+  "image": "https://img.avifkit.com/blog/blog05.webp",
   "content": [
     {
       "type": "lead",
