--- a/i18n/blog/batch-convert-avif-images-free/ja.json
+++ b/i18n/blog/batch-convert-avif-images-free/ja.json
@@ -7,7 +7,7 @@
   "readingTime": 4,
   "category": "チュートリアル",
   "keywords": "一括 avif 変換, 複数 avif ファイル 変換, avif 一括処理",
-  "image": "/blog05.jpg",
+  "image": "https://img.avifkit.com/blog/blog05.webp",
   "content": [
     {
       "type": "lead",
