--- a/i18n/blog/how-to-open-avif-windows/es.json
+++ b/i18n/blog/how-to-open-avif-windows/es.json
@@ -7,7 +7,7 @@
   "readingTime": 4,
   "category": "Tutorial",
   "keywords": "abrir avif windows, convertir avif a jpg, windows 10 avif, extensión avif, convertidor avif gratis",
-  "image": "/blog01.jpg",
+  "image": "https://img.avifkit.com/blog/blog01.webp",
   "content": [
     {
       "type": "lead",
