--- a/i18n/blog/how-to-open-avif-windows/ja.json
+++ b/i18n/blog/how-to-open-avif-windows/ja.json
@@ -7,7 +7,7 @@
   "readingTime": 4,
   "category": "チュートリアル",
   "keywords": "avif 開き方, avif jpg 変換, windows10 avif, avif 拡張子, 無料 avif 変換",
-  "image": "/blog01.jpg",
+  "image": "https://img.avifkit.com/blog/blog01.webp",
   "content": [
     {
       "type": "lead",
