--- a/i18n/blog/secure-avif-converter-client-side/es.json
+++ b/i18n/blog/secure-avif-converter-client-side/es.json
@@ -7,7 +7,7 @@
   "readingTime": 6,
   "category": "Privacidad",
   "keywords": "convertidor avif seguro, conversión del lado del cliente, convertidor de imágenes en línea seguro, procesamiento de imágenes wasm",
-  "image": "/blog03.jpg",
+  "image": "https://img.avifkit.com/blog/blog03.webp",
     "content": [
     {
       "type": "lead",
