--- a/i18n/blog/secure-avif-converter-client-side/ja.json
+++ b/i18n/blog/secure-avif-converter-client-side/ja.json
@@ -7,7 +7,7 @@
   "readingTime": 6,
   "category": "プライバシー",
   "keywords": "安全な avif 変換, クライアント側変換, オンライン画像変換 安全, wasm 画像処理",
-  "image": "/blog03.jpg",
+  "image": "https://img.avifkit.com/blog/blog03.webp",
     "content": [
     {
       "type": "lead",
