--- a/i18n/blog/why-photoshop-cant-open-avif/ja.json
+++ b/i18n/blog/why-photoshop-cant-open-avif/ja.json
@@ -7,7 +7,7 @@
   "readingTime": 5,
   "category": "ガイド",
   "keywords": "photoshop avif サポート, adobe avif プラグイン, photoshop avif 開けない, avif photoshop 回避策",
-   "image": "/blog06.jpg",
+   "image": "https://img.avifkit.com/blog/blog06.webp",
   "content": [
     {
       "type": "lead",
