--- a/i18n/blog/avif-to-png-transparent-background/en.json
+++ b/i18n/blog/avif-to-png-transparent-background/en.json
@@ -7,7 +7,7 @@
   "readingTime": 5,
   "category": "Guide",
   "keywords": "convert avif to png transparent, avif to png alpha channel, keep background transparent, avif vs png quality",
-  "image": "/blog02.jpg",
+  "image": "https://img.avifkit.com/blog/blog02.webp",
   "content": [
     {
       "type": "lead",
