--- a/i18n/blog/avif-to-png-transparent-background/es.json
+++ b/i18n/blog/avif-to-png-transparent-background/es.json
@@ -7,7 +7,7 @@
   "readingTime": 5,
   "category": "Guía",
   "keywords": "convertir avif a png transparente, canal alfa avif, mantener fondo transparente, avif vs png calidad",
-  "image": "/blog02.jpg",
+  "image": "https://img.avifkit.com/blog/blog02.webp",
   "content": [
     {
       "type": "lead",
