--- a/i18n/blog/avif-to-png-transparent-background/fr.json
+++ b/i18n/blog/avif-to-png-transparent-background/fr.json
@@ -7,7 +7,7 @@
   "readingTime": 5,
   "category": "Guide",
   "keywords": "convertir avif en png transparent, canal alpha avif, garder fond transparent",
-  "image": "/blog02.jpg",
+  "image": "https://img.avifkit.com/blog/blog02.webp",
   "content": [
     {
       "type": "lead",
