--- a/i18n/blog/avif-vs-jpg-quality-comparison/en.json
+++ b/i18n/blog/avif-vs-jpg-quality-comparison/en.json
@@ -7,7 +7,7 @@
   "readingTime": 5,
   "category": "Comparison",
   "keywords": "avif vs jpg quality, image format comparison, file size comparison, compression quality",
-  "image": "/blog04.jpg",
+  "image": "https://img.avifkit.com/blog/blog04.webp",
   "content": [
     {
       "type": "lead",
