--- a/i18n/blog/how-to-open-avif-windows/fr.json
+++ b/i18n/blog/how-to-open-avif-windows/fr.json
@@ -7,7 +7,7 @@
   "readingTime": 4,
   "category": "Tutoriel",
   "keywords": "ouvrir avif windows, convertir avif en jpg, windows 10 avif, extension avif, convertisseur avif gratuit",
-  "image": "/blog01.jpg",
+  "image": "https://img.avifkit.com/blog/blog01.webp",
   "content": [
     {
       "type": "lead",
