--- a/i18n/blog/secure-avif-converter-client-side/en.json
+++ b/i18n/blog/secure-avif-converter-client-side/en.json
@@ -7,7 +7,7 @@
   "readingTime": 6,
   "category": "Privacy",
   "keywords": "secure avif converter, client-side conversion, is online image converter safe, wasm image processing",
-  "image": "/blog03.jpg",
+  "image": "https://img.avifkit.com/blog/blog03.webp",
   "content": [
     {
       "type": "lead",
