--- a/i18n/blog/secure-avif-converter-client-side/fr.json
+++ b/i18n/blog/secure-avif-converter-client-side/fr.json
@@ -7,7 +7,7 @@
   "readingTime": 6,
   "category": "Confidentialité",
   "keywords": "convertisseur avif sécurisé, conversion côté client, convertisseur d'images en ligne sûr",
-  "image": "/blog03.jpg",
+  "image": "https://img.avifkit.com/blog/blog03.webp",
     "content": [
     {
       "type": "lead",
