--- a/i18n/blog/why-photoshop-cant-open-avif/es.json
+++ b/i18n/blog/why-photoshop-cant-open-avif/es.json
@@ -7,7 +7,7 @@
   "readingTime": 5,
   "category": "Guía",
   "keywords": "photoshop soporte avif, plugin avif adobe, photoshop no puede abrir avif",
-   "image": "/blog06.jpg",
+   "image": "https://img.avifkit.com/blog/blog06.webp",
   "content": [
     {
       "type": "lead",
