--- a/i18n/blog/why-photoshop-cant-open-avif/fr.json
+++ b/i18n/blog/why-photoshop-cant-open-avif/fr.json
@@ -7,7 +7,7 @@
   "readingTime": 5,
   "category": "Guide",
   "keywords": "photoshop support avif, plugin avif adobe",
-   "image": "/blog06.jpg",
+   "image": "https://img.avifkit.com/blog/blog06.webp",
   "content": [
     {
       "type": "lead",
