优化体验,修复bug

--- a/i18n/blog/how-to-open-avif-windows/en.json
+++ b/i18n/blog/how-to-open-avif-windows/en.json
@@ -7,7 +7,7 @@
   "readingTime": 4,
   "category": "Tutorial",
   "keywords": "open avif windows, avif file viewer, convert avif to jpg, windows 10 avif support, avif extension, free avif converter",
-  "image": "https://img.avifkit.com/blog/blog01.jpg",
+  "image": "https://img.avifkit.com/blog/blog01.webp",
   "content": [
     {
       "type": "lead",
